--- a/sfdxDemoproject/force-app/main/default/classes/test.cls
+++ b/sfdxDemoproject/force-app/main/default/classes/test.cls
@@ -1,5 +1,5 @@
 public class test {
-    public static void test1(){
+    public static void test(){
         system.debug('Hello World');
     }
 }
